--- a/client/src/app/components/layout/root/profile-tab/profile-tab.component.scss
+++ b/client/src/app/components/layout/root/profile-tab/profile-tab.component.scss
@@ -7,7 +7,7 @@
 .tab {
     width: 100%;
     height: 60px;
-    background-color: rgba(60, 94, 183, 0.7);
+    background-color: $button-active-color;
 
     display: flex;
     flex-direction: row;
