--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -83,3 +83,13 @@ border: none; /* Removes any borders */
 padding: 0; /* Resets padding */
 margin: 0; /* Resets margin */
 }
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
