--- a/client/src/app/components/layout/room/chat/chat.component.html
+++ b/client/src/app/components/layout/room/chat/chat.component.html
@@ -12,14 +12,11 @@
             <p class="text">{{message.message}}</p>
         </div>
 
-        <div class="text-entry">
-            <textarea #textarea *ngIf="!disabledMessage"
-                [placeholder]="messages.length === 0 ? 'Begin the conversation...' : 'Send a message...'" 
-                [rows]="rows$ | async" (input)="onChange($event)"></textarea>
-            <p class="disabled-message" *ngIf="disabledMessage">{{disabledMessage}}</p>
-            <img class="submit-button" src="assets/img/button-icons/submit-chat.svg" (click)="clickSubmitButton()"
-                width="11px" [ngClass]="{disabled: !!disabledMessage}">
-        </div>
+        <app-chat-text-entry
+            [disabledMessage]="disabledMessage"
+            [placeholderText]="messages.length === 0 ? 'Begin the conversation...' : 'Send a message...'"
+            (sendMessage)="sendMessage.emit($event)"
+        />
     </div>
 
 </div>
