--- a/client/src/app/components/main-chat/main-chat.component.scss
+++ b/client/src/app/components/main-chat/main-chat.component.scss
@@ -105,4 +105,82 @@ app-chat-text-entry {
 .messages {
     flex-grow: 1;
     overflow-y: scroll;
+
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
+
+.message {
+    position: relative;
+
+    width: 100%;
+    box-sizing: border-box;
+    padding: 8px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 7px;
+
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
+.message .header {
+    width: 100%;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.message .player {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3px;
+}
+
+.player h3 {
+    font-family: $main-font;
+    font-weight: 600;
+    font-size: 10px;
+    padding: 0;
+    margin: 0;
+}
+
+.player:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.player:active {
+    opacity: 0.7;
+}
+
+.message p {
+    font-family: $chat-font;
+    font-weight: 500;
+    font-size: 10px;
+    padding: 0;
+    margin: 0;
+
+    word-wrap: break-word; /* For older browsers */
+    overflow-wrap: break-word; /* Standard */
+    word-break: break-word; /* Ensures compatibility */
+}
+
+p.time-ago {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 8px;
+    padding: 0;
+    margin: 0;
+    opacity: 0.8;
 }
