--- a/client/src/app/components/layout/play-puzzle/play-puzzle-page/play-puzzle-page.component.scss
+++ b/client/src/app/components/layout/play-puzzle/play-puzzle-page/play-puzzle-page.component.scss
@@ -204,7 +204,7 @@ header {
 }
 
 .timer {
-    width: 90%;
+    width: calc(100dvw - 40px);
     margin-bottom: 20px;
 }
 
@@ -360,6 +360,12 @@ header {
   .padding-above-puzzle-stats {
     height: 10px;
   }
+
+@media screen and (max-width: 900px) {
+  app-xp-status {
+    display: none;
+  }
+}
 
 @media screen and (max-height: 800px) {
   .main-row {
