--- a/client/src/app/components/layout/room/room/room.component.html
+++ b/client/src/app/components/layout/room/room/room.component.html
@@ -5,11 +5,15 @@
 
 <app-fullscreen-exit-button />
 
-<app-chat
-    [messages]="(roomService.getMessages$() | async) ?? []"
-    [numSpectators]="(roomService.getNumSpectators$() | async) ?? 0"
-    (sendMessage)="sendChatMessage($event)"
-/>
+<ng-container *ngIf="roomType$ | async as roomType">
+    <app-chat *ngIf="roomChatTypes.includes(roomType)"
+        [messages]="(roomService.getMessages$() | async) ?? []"
+        [numSpectators]="(roomService.getNumSpectators$() | async) ?? 0"
+        (sendMessage)="sendChatMessage($event)"
+    />
+
+    <app-main-chat *ngIf="globalChatTypes.includes(roomType)" />
+</ng-container>
 
 <app-room-modal *ngIf="roomService.modal$ | async as modal">
     <app-solo-before-game-modal *ngIf="modal === RoomModal.SOLO_BEFORE_GAME" />
