--- a/client/src/app/components/layout/room/room/room.component.scss
+++ b/client/src/app/components/layout/room/room/room.component.scss
@@ -3,3 +3,10 @@
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 850px) {
+    app-main-chat {
+        display: none;
+    }
+    
+}
