--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -25,7 +25,7 @@ $multiplayer-red-color: #B73C3C;
 $multiplayer-orange-color: #B7693C;
 
 $highest-score-color: #4C7EFF;
-$ranked-color: #FF4C4C;
+$ranked-color: #FFA520;
 $puzzle-color: #BA4CFF;
 
 
