--- a/client/src/app/components/modals/profile-modal/profile-modal.component.html
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.html
@@ -19,6 +19,24 @@
             <p class="coming-soon">Coming soon!</p>
         </div>
 
+        <div class="stats-panels">
+            <div class="big-stat solo">
+                <h1>#3</h1>
+                <app-highest-score [highestScore]="162460" [size]="20" />
+            </div>
+            <div class="big-stat ranked">
+                <h1>#24</h1>
+                <app-trophies [trophies]="2568" [size]="20" />
+            </div>
+            <div class="big-stat puzzle">
+                <h1>#356</h1>
+                <app-puzzle-elo [puzzleElo]="1980" [size]="20" />
+            </div>
+            <div class="other-stats">
+
+            </div>
+        </div>
+
     </div>
 
     <div class="text-row">
