--- a/client/src/app/components/modals/profile-modal/profile-modal.component.html
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.html
@@ -15,8 +15,8 @@
             <app-xp-info [league]="data.dbUser.league" [xp]="data.dbUser.xp" />
         </div>
 
-        <div class="other">
-            <p class="coming-soon">Coming soon!</p>
+        <div class="about-me-panel">
+            <h1>Coming soon!</h1>
         </div>
 
         <div class="stats-panels">
