--- a/client/src/app/components/layout/root/sidebar/sidebar.component.scss
+++ b/client/src/app/components/layout/root/sidebar/sidebar.component.scss
@@ -39,6 +39,20 @@
 .logo {
     margin-top: 20px;
     align-self: center;
+
+    transition: all 0.3s;
+}
+
+.logo:hover {
+    cursor: pointer;
+    transform: scale(1.03);
+    filter: brightness(1.1) contrast(1.02);
+}
+
+.logo:active {
+    cursor: pointer;
+    transform: scale(1.06);
+    filter: brightness(1.1) contrast(1.02);
 }
 
 .brand-name {
