new mode icon version to prevent caching, and esc to close chat

--- a/client/src/app/components/ui/mode-icon/mode-icon.component.html
+++ b/client/src/app/components/ui/mode-icon/mode-icon.component.html
@@ -1,2 +1,2 @@
-<img [src]="'./assets/img/mode-icons/' + mode + '.svg'" class="prevent-select"
+<img [src]="'./assets/img/mode-icons/' + mode + '.svg?v=2'" class="prevent-select"
     [attr.width]="width + 'px'" />
