--- a/client/src/app/components/layout/play/play-page/play-page.component.html
+++ b/client/src/app/components/layout/play/play-page/play-page.component.html
@@ -17,7 +17,7 @@
 
     <section class="mode-select" *ngIf="leaderboards$ | async as leaderboards">
         <h1 class="label">Select mode</h1>
-        <div class="mode border-color" *ngFor="let mode of modes" [ngClass]="mode" (click)="onClickMode(mode)">
+        <div class="mode border-color" *ngFor="let mode of modes" [ngClass]="[mode, modeEnabled(mode, me) ? 'enabled' : 'disabled']" (click)="onClickMode(mode)">
             <div class="left">
                 <app-mode-icon [mode]="mode" [width]="100" />
                 <div class="text prevent-select">
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="right">
-                <div class="leaderboard">
+                <div class="leaderboard" *ngIf="modeEnabled(mode, me); else disabled">
                     <div class="row" *ngFor="let i of [0,1,2]">
                         <div class="row-content border-color background-color"
                             *ngIf="leaderboards[mode].leaderboard[i] as player" [ngClass]="[mode, isMe(player.userid) ? 'me' : '']">
@@ -40,6 +40,13 @@
                         </div>
                     </div>
                 </div>
+                <ng-template #disabled>
+                    <div class="mode-disabled" [ngClass]="mode">
+                        <p>Score <strong>{{numberWithCommas(me.highest_score)}}/100,000</strong> in solo to unlock</p>
+                        <app-locked-icon [mode]="mode" />
+                    </div>
+                </ng-template>
+
             </div>
             
         </div>
