--- a/client/src/app/components/layout/room/solo-room/solo-room.component.scss
+++ b/client/src/app/components/layout/room/solo-room/solo-room.component.scss
@@ -10,6 +10,18 @@
     grid-template-columns: 150px 1fr 300px;
 }
 
+@media screen and (min-width: 1275px) {
+    :host {
+        grid-template-columns: 300px 1fr 300px;
+    }
+}
+
+@media screen and (min-width: 1450px) {
+    :host {
+        grid-template-columns: 350px 1fr 300px;
+    }
+}
+
 .main {
     display: flex;
     align-items: center;
