--- a/client/src/app/components/layout/room/modals/solo-before-game-modal/solo-before-game-modal.component.html
+++ b/client/src/app/components/layout/room/modals/solo-before-game-modal/solo-before-game-modal.component.html
@@ -6,9 +6,11 @@
             <div class="select-level-container">
                 <h1>Select start level</h1>
                 <div class="levels prevent-select">
-                    <div class="level prevent-select" *ngFor="let level of VALID_START_LEVELS"
-                    [ngClass]="{'selected' : (startLevel$ | async) == level}" (click)="startLevel$.next(level)">
-                        <p>{{level}}</p>
+                    <div class="level-row prevent-select" *ngFor="let levelRow of VALID_START_LEVELS">
+                        <div class="level prevent-select" *ngFor="let level of levelRow"
+                        [ngClass]="{'selected' : (startLevel$ | async) == level}" (click)="startLevel$.next(level)">
+                            <p>{{level}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
