--- a/client/src/app/components/ui/modal-container/modal-container.component.html
+++ b/client/src/app/components/ui/modal-container/modal-container.component.html
@@ -5,5 +5,6 @@
         <app-challenge-modal *ngIf="modal === ModalType.CHALLENGE_PLAYER" [config]="modalManager.getModalConfig()" />
         <app-quest-list-modal *ngIf="modal === ModalType.QUEST_LIST" [config]="modalManager.getModalConfig()" />
         <app-profile-modal *ngIf="modal === ModalType.PROFILE" [config]="modalManager.getModalConfig()" />
+        <app-select-starting-trophies-modal *ngIf="modal === ModalType.SELECT_STARTING_TROPHIES" />
     </app-modal>
 </div>
