--- a/client/src/app/components/modals/select-starting-trophies-modal/select-starting-trophies-modal.component.html
+++ b/client/src/app/components/modals/select-starting-trophies-modal/select-starting-trophies-modal.component.html
@@ -1,1 +1,28 @@
-<p>select-starting-trophies-modal works!</p>
+<div class="modal">
+    <h1>Choose your skill level!</h1>
+    <h2>
+        Select a starting trophy count and start level, and match similarly-rated opponents! Your trophies will
+        go up and down as you win and lose matches.
+    </h2>
+    
+    <div class="options">
+        <button class="option" *ngFor="let option of options" (click)="onClickOption(option)"
+            [ngClass]="{'selected': option === (selectedOption$ | async), 'locked': !isUnlocked(option)}">
+                <p class="title">{{option.label}}</p>
+                <app-trophies [trophies]="option.trophies" [size]="35" />
+                <p class="level">Level {{getStartLevelForElo(option.trophies)}} start</p>
+                <p *ngIf="isUnlocked(option)" class="description unlocked">Unlocked!</p>
+                <p *ngIf="!isUnlocked(option)" class="description locked">Unlocks at <strong>{{numberWithCommas(option.unlockScore!)}}</strong> score!</p>
+        </button>
+    </div>
+
+    <div class="explain">
+        
+    </div>
+
+    <div class="buttons">
+        <app-solid-button label="Not yet" [color]="ButtonColor.GREY" (smartClick)="close()" />
+        <app-solid-button label="Play ranked" [color]="ButtonColor.BLUE" (smartClick)="play()" [disabled]="!(selectedOption$ | async)" />
+      </div>
+
+</div>
