--- a/client/src/app/components/modals/select-starting-trophies-modal/select-starting-trophies-modal.component.scss
+++ b/client/src/app/components/modals/select-starting-trophies-modal/select-starting-trophies-modal.component.scss
@@ -2,12 +2,16 @@
 
 .modal {
     width: 600px;
-    height: 400px;
+    height: 500px;
 
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
     align-items: center;
+}
+
+.modal-description {
+    width: 80%;
 }
 
 h1 {
@@ -30,9 +34,9 @@ h2 {
     line-height: 1.5;
     text-align: center;
     text-wrap: pretty;
-    width: 80%;
     padding: 0;
     margin: 0;
+    width: 80%;
 }
 
 .options {
@@ -56,6 +60,10 @@ h2 {
     box-sizing: border-box;
 
     border: 2px solid transparent;
+}
+
+.option app-trophies {
+    margin-block: 10px;
 }
 
 .option:hover:not(.locked) {
@@ -97,11 +105,6 @@ h2 {
     margin: 0;
 }
 
-app-trophies {
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
 .option .description {
     font-family: Montserrat;
     font-size: 10px;
@@ -119,6 +122,89 @@ strong {
 
 .explain {
     margin-block: auto;
+    width: 80%;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.explain h3 {
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 400;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.line-container {
+    height: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+
+.line-circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
+}
+
+.range {
+    position: relative;
+    width: 100%;
+    height: 10px;
+}
+
+.range app-range {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: translateY(-30px);
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: $ranked-color;
+
+    position: relative;
+}
+
+.circle app-trophies {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -18px);
+    width: 50px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+hr {
+    width: 100%;
+    border: 0;
+    border-top: 2px solid $ranked-color;
+    border-radius: 10px;
+    margin: 0;
+    padding: 0;
 }
 
 .buttons {
