working set intial trophies

--- a/client/src/app/components/layout/play/play-page/play-page.component.html
+++ b/client/src/app/components/layout/play/play-page/play-page.component.html
@@ -42,7 +42,7 @@
                 </div>
                 <ng-template #disabled>
                     <div *ngIf="!mustPickStartingTrophies(mode, me)" class="mode-disabled" [ngClass]="mode">
-                        <p class="prevent-select">Score <strong>{{numberWithCommas(me.highest_score)}}/{{numberWithCommas(UNLOCK_RANKED_SCORE)}}</strong> in solo to unlock</p>
+                        <p class="prevent-select">Score <strong>{{numberWithCommas(me.highest_score)}}/{{numberWithCommas(RANKED_UNLOCK_SCORE)}}</strong> in solo to unlock</p>
                         <app-locked-icon [mode]="mode" [locked]="true" />
                     </div>
                     <div *ngIf="mustPickStartingTrophies(mode, me)" class="mode-disabled" [ngClass]="mode">
