--- a/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
+++ b/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
@@ -1,10 +1,18 @@
 @import "../../../../../styles.scss";
 
-.center-div {
+.found-container {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    pointer-events: none;
 }
 
 .root {
@@ -83,6 +91,7 @@
 }
 
 .found-opponent {
+    justify-self: center;
     width: 80vw;
     max-width: 1100px;
 
@@ -187,4 +196,30 @@
 .versus {
     opacity: 0;
     animation: opacityEnter 1s ease forwards 1.3s;
+}
+
+
+.upper-container {
+    flex-grow: 1;
+}
+
+.lower-container {
+    flex-grow: 1;
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+    animation: opacityEnter 1s ease forwards 2.8s;
+}
+
+.lower-container p {
+    font-family: $main-font;
+    font-weight: 700;
+    font-size: 40px;
+    color: white;
+    margin: 0;
+    text-wrap: nowrap;
 }
