--- a/client/src/app/components/ui/fullscreen-exit-button/fullscreen-exit-button.component.html
+++ b/client/src/app/components/ui/fullscreen-exit-button/fullscreen-exit-button.component.html
@@ -1,1 +1,1 @@
-<app-outline-button class="leave-fullscreen-button" label="Exit" (click)="exit()" />
+<app-outline-button class="leave-fullscreen-button" label="Exit" (click)="exit()" appClickSound />
