--- a/client/src/app/components/layout/play/play-page/play-page.component.html
+++ b/client/src/app/components/layout/play/play-page/play-page.component.html
@@ -17,7 +17,7 @@
 
     <section class="mode-select" *ngIf="leaderboards$ | async as leaderboards">
         <h1 class="label">Select mode</h1>
-        <div class="mode border-color" *ngFor="let mode of modes" [ngClass]="[mode, modeEnabled(mode, me) ? 'enabled' : 'disabled']" (click)="onClickMode(mode)">
+        <div appClickSound [clickSoundDisabled]="!modeEnabled(mode, me)" class="mode border-color" *ngFor="let mode of modes" [ngClass]="[mode, modeEnabled(mode, me) ? 'enabled' : 'disabled']" (click)="onClickMode(mode)">
             <div class="left">
                 <app-mode-icon [mode]="mode" [width]="100" />
                 <div class="text prevent-select">
