--- a/client/src/app/components/layout/root/profile-tab/profile-tab.component.html
+++ b/client/src/app/components/layout/root/profile-tab/profile-tab.component.html
@@ -1,4 +1,4 @@
-<div class="tab" (click)="openProfile()" appClickSound>
+<div class="tab" (click)="openProfile()">
 
     <div class="tab-left">
         <img class="icon prevent-select" [src]="tabIcon" width="20px">
