--- a/client/src/app/components/ui/outline-button/outline-button.component.html
+++ b/client/src/app/components/ui/outline-button/outline-button.component.html
@@ -1,3 +1,3 @@
-<div class="button prevent-select">
+<div class="button prevent-select" appClickSound>
     <h1 class="label">{{ label }}</h1>
 </div>
