--- a/client/src/app/components/ui/table/leaderboard-table.component.html
+++ b/client/src/app/components/ui/table/leaderboard-table.component.html
@@ -10,7 +10,9 @@
         <div class="cell player">
             <div class="ranking prevent-select" [ngClass]="getDigitClassname(row.rank)">#{{ row.rank }}</div>
             <app-league-icon [league]="row.league" [height]="22" />
-            <p class="username prevent-select" [tooltip]="'View ' + row.username + '\'s profile'" (click)="viewProfile(row.userid)">{{row.username}}</p>
+            <button (click)="viewProfile(row.userid)">
+                <p class="username prevent-select" [tooltip]="'View ' + row.username + '\'s profile'">{{row.username}}</p>
+            </button>
             <app-online-indicator [isOnline]="row.isOnline || row.userid === myID" [inActivity]="row.inActivity" />
         </div>
         <ng-container *ngFor="let item of attributes | keyvalue: originalOrder">
