--- a/client/src/app/components/layout/room/chat/chat.component.scss
+++ b/client/src/app/components/layout/room/chat/chat.component.scss
@@ -64,6 +64,10 @@
     overflow-wrap: anywhere;
 }
 
+.text.special {
+    font-style: italic;
+}
+
 .fade {
     -webkit-mask-image: linear-gradient(0deg, #000 60%, transparent);
 }
