--- a/client/src/app/components/layout/room/solo-room/solo-room.component.scss
+++ b/client/src/app/components/layout/room/solo-room/solo-room.component.scss
@@ -34,6 +34,25 @@
     }
 }
 
+.spectator {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.spectator-header {
+    display: flex;
+    flex-direction: column;
+}
+
+.spectator-header p {
+    font-family: $main-font;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
+}
+
 .right {
     display: flex;
     flex-direction: column;
